# vtt-transcribe

./: .dockerignore  .env.example  .gitignore  .mypy.ini  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.diarization  Dockerfile.diarization-gpu  LICENSE  LOGGING_IMPLEMENTATION.md  Makefile  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  TASKS.md  TODO-DOCKER-E2E.md  USER_SETUP_GUIDE.md  docker-compose.yml  noxfile.py  pyproject.toml  ruff.toml  test_audio_management.py  test_main.py
.beads/: README.md  beads.left.jsonl  beads.left.meta.json  issues.jsonl  sync-helper.sh  sync-state.json  sync_base.jsonl
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/skills/beads/: SKILL.md
.github/skills/gh-cli/: SKILL.md
.github/skills/pytest-tdd/: SKILL.md
.github/skills/pytest-tdd/templates/: test_template.py
.github/skills/tdd/: SKILL.md
.github/skills/tdd/templates/: test_template.py
.github/workflows/: ci.yml  close-superseded-prs.yml  docker-build-test-diarization-gpu.yml  docker-build-test-diarization.yml  docker-build-test.yml  docker-publish.yml  frontend-ci.yml  monthly-compatibility-monitor.yml  nox-main.yml  publish-testpypi.yml  publish.yml  release.yml
docker/: init-db.sql
docs/: BEADS_MIGRATION.md  CHANGELOG.md  CIBUILDWHEEL_PLAN.md  CONTRIBUTING.md  DOCKER_COMPOSE.md  DOCKER_HUB.md  DOCKER_REGISTRY.md  DOCKER_SETUP.md  INFRASTRUCTURE_CICD.md  JOB_PERSISTENCE_INTEGRATION.md  LOGGING.md  PYANNOTE_MODEL_ACCEPTANCE.md  RELEASE_CHECKLIST.md  ROADMAP.md  TESTING.md  USER_MANAGEMENT.md  USER_SETUP_GUIDE.md
frontend/: .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/coverage/: index.html  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/src/: App-minimal.svelte.html  App.svelte.html  index.html  main.ts.html  types.ts.html
frontend/coverage/lcov-report/src/components/: FileUpload.svelte.html  ProgressView.svelte.html  TranscriptViewer.svelte.html  index.html
frontend/coverage/src/: App-minimal.svelte.html  App.svelte.html  index.html  main.ts.html  types.ts.html
frontend/coverage/src/components/: FileUpload.svelte.html  ProgressView.svelte.html  TranscriptViewer.svelte.html  index.html
frontend/e2e/: fixtures.ts  navigation-and-settings.spec.ts
frontend/public/: test.html
frontend/src/: App-minimal.svelte  App.svelte  app.css  main.ts  types.ts
frontend/src/__tests__/: App-minimal.test.ts  App.test.ts  AppAuth.test.ts  FileUpload.test.ts  Login.test.ts  Navigation.test.ts  Settings.test.ts  TranscriptViewer.test.ts  UserMenu.test.ts  types.test.ts
frontend/src/components/: FileUpload.svelte  Login.svelte  Navigation.svelte  ProgressView.svelte  Settings.svelte  TranscriptViewer.svelte  UserMenu.svelte
scripts/: .gitignore  README.md  export_issues.py  generate_secrets.py  init_db.py
tests/: __init__.py  conftest.py  test_api.py  test_audio_chunker.py  test_audio_management.py  test_audio_manager.py  test_cli.py  test_dependencies.py  test_diarization.py  test_diarization_import.py  test_docker_compose.py  test_ffmpeg_check.py  test_generate_secrets.py  test_handlers.py  test_language_detection.py  test_logging_config.py  test_main.py  test_new_features.py  test_package_structure.py  test_stdin_mode.py  test_transcriber.py  test_transcript_formatter.py  test_translator.py  test_version.py
tests/smoke/: BATS_AUDIT.md  README.md  standard.bats  stdin.bats
tests/test_api/: __init__.py  test_app.py  test_auth.py  test_diarization.py  test_error_handling.py  test_final_coverage.py  test_oauth.py  test_routes_coverage.py  test_transcription_endpoints.py  test_user_management.py  test_websocket.py  test_websockets.py
tests/utils/: generate_dual_voice_audio_mp3.py
vtt/: __init__.py  audio_manager.py  cli.py  diarization.py  handlers.py  main.py  transcriber.py  transcript_formatter.py
vtt_transcribe/: __main__.py  api.py  audio_chunker.py  audio_manager.py  cli.py  dependencies.py  diarization.py  handlers.py  logging_config.py  main.py  transcriber.py  translator.py
vtt_transcribe/api/: README.md  __init__.py  app.py  auth.py  database.py  models.py  server.py
vtt_transcribe/api/routes/: api_keys.py  auth.py  health.py  jobs.py  oauth.py  transcription.py  websocket.py  websockets.py
