[project]
name = "vtt-transcribe"
version = "0.3.0b4"
description = "Transcribe video and audio files to text using OpenAI Whisper with optional speaker diarization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "JLCodeSource", email = "JLCodeSource@gmail.com"}
]
keywords = ["transcription", "whisper", "openai", "video", "audio", "speech-to-text", "diarization", "subtitles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "moviepy>=2.2.1",
    "openai>=2.15.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/JLCodeSource/vtt-transcribe"
Repository = "https://github.com/JLCodeSource/vtt-transcribe"
Issues = "https://github.com/JLCodeSource/vtt-transcribe/issues"
Changelog = "https://github.com/JLCodeSource/vtt-transcribe/blob/main/docs/CHANGELOG.md"

[project.optional-dependencies]
diarization = [
    "pyannote.audio>=3.1.0",
    "torch==2.8.0",  # Pinned due to torch 2.10+ breaking change in weights_only
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
]
build = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "hatchling>=1.18.0",
]

[project.scripts]
vtt = "vtt_transcribe.main:main"

[dependency-groups]
dev = [
    "build>=1.0.0",
    "coverage>=7.13.2",
    "hatch>=1.9.0",
    "mypy>=1.19.1",
    "nox>=2024.4.15",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "pre-commit>=3.4.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:pyannote.audio.core.io",
    "ignore::UserWarning:pyannote.audio.models.blocks.pooling",
]
markers = [
    "integration: marks tests as integration tests (require external services/models)",
    "diarization: marks tests that require diarization dependencies (torch, pyannote)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vtt_transcribe"]

[tool.hatch.build.targets.sdist]
include = [
  "/vtt_transcribe",
  "/tests",
  "/README.md",
  "/LICENSE",
]
